--- a/hack website/index.html
+++ b/hack website/index.html
@@ -15,7 +15,7 @@
     <li class="active"><a href="#">cart</a></li>
 </ul>
 <div class="cart">
-    <div class="card">
+    <div class="card" id = "phone">
         <img src="phone.jpg" style="width:100%">
         <h1>Iphone</h1>
         <p class="price">Rs 100000.00</p>
